<resources>
    <string name="app_name">NarsinghJan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About Us</string>
    <string name="scanner">Scanner</string>
    <string name="language">Language</string>
    <string name="become_a_member">Become a member</string>
    <string name="download_id">Download Id</string>
    <string name="member_list">Member List</string>
    <string name="up_constituency">UP Constituency</string>
    <string name="news_articles">News Articles</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_us">Contact Us</string>
    <string name="home_1">Bharat is not just a nation ,a culture, but it is denoation of sanatan culture, but now since our sanatan culture has been attacked and targeted by all we sanatanis have to rise.
 today no organisationor party is working  towards the betterment of sanatanis, so here  we are, nrasingh jan party. The belief and ideology of the the party is for the dharma, till its last breath.
 Even , when politician  have forgot to take stand, for the dharma, to save the nation in the present scenario, we take stand of hindus. We are crystal clear in our vision of bharat,
 we want to re-establish bharat as per the orignal culture , what it was with the power of vedas and shastras, with the understadning of culture and knoledge of our vidyas, parllley working with the advancement of the latest technology.
 Certainly till this day the glory of our ancestors ios visible in the kinds of work , and knowledge that they have transferred to us.
</string>
    <string name="home_2">Being sanatani, and bharatis, it is our right to think about our dharma and nation, from the known history of millions of years, even when we look back to mahabharat, when gita was said being said by
 the supreme lord of all known, lord krishna himself , which was just 5000 years back , when no other group of thoughts existed , since sanatan is only dharma , which existed , and will exisits.

 the word  " sanatan" refers to one which is the only supreme truth, which existed , which is existing , and will continue to exist, there is no start and end to it.

 Nrasingh jan party , believes , in growth of all sects of bharatis , all caste ,creed , gender, or background, we believe , we are first  sanatanis , we have different responsibilities as different varnas in society ,
 but at  the same time we are descendants of krishna . We believe  the society is known from it is economic (arthik ) as well as  behavioural humanitarian (mamas) growth, which comes from spiritual( adhyatmic) growth .\

 we believe , we can follow dharma , and then only we can dominate all the domains, from technology to living science, we have explored enough of western thoughts , philosophy and science , which ended in nothing more pathetic ,
 than disaster, now the time has come for rise of sanatanis,  the hindus, we all have sufficient grace of krishna, now the time has come to embrace the thoughts of  dharma  and give our country its older glory back.

 ceratinly , we have been blessed with a young and dynamic working youth force across the country , the party wish to do " SATTA SHODHAN" , by means of political power . We respect all, we work for development of all, through coming back to sanatan and our culture.
 without nrasingh jan party comming to power we can not expect the vesion of the HINDU RASTRA to come true withe the blessing of jagat guru puri sankaracharya we believe , We  are just the vanar shena of lord Ram on earth.\n

        <br><b>We are here to serve the people , to listen each to their pain  , to make them believe , that politics , honesty and service can go hand in hand with each other, some of our goals are:\n</b>\n</br>

</string>
    <string name="home_3"><br>1. To make India hindu rashtra , to save sanatan culture as well.\n</br>

  <br>2. to give only 4 math of shankracharya, supreme power and place for sanatan dharma decision making power, and no one else can be called or taken to be shankracharya .\n</br>

 <br>3. to apply " hindu diety insult law ".\n</br>

 <br>4. we wish to  bring vedic eductaion back to school , complete demolition of western and anti national school of thoughts.\n</br>

 <br>5. rise of sanatan vidyas , from martail arts ,defence , and warfare, making shatriye dharm mandatory for 3 years for all men and women.\n</br>

 <br>6. complete ban on cow slaughter and  cow meat consumption without any conditions  and compromises, strict laws  of cow slaughter with death penalty .\n</br>

 <br>7. we believe making villages better than cities , a place of fresh air ,and ample amount of job opportunities.\n</br>

 <br>8. for us farmer is our "Ann data " our devta , he should be given full support financialy and mentally through our policies .\n</br>

 <br>9. free all temples from government control .\n</br>

 <br>10. common education policy for all.

 uniform civil court .etc.\n</br></string>
    <string name="upload">Upload Aadhar Card or Driving
    <br>License or voter id Card or</br>
    <br>Passport</br></string>
    <string name="donation">Donation</string>
    <string name="upcoming_events">Upcoming Events</string>
</resources>